# protohacker-in-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
.github/workflows/: fly-deploy.yml
documents/: how_to_process_tcp_stream.md  how_to_test_tcp_or_udp.md
documents/design-data-intensive-application/: note.md
documents/maelstrom/: efficient_gossip.md
documents/problems/: 01-prime-time.md  02-unusual-db.md  03-budget-chat.md  04-unusual-database-program.md  05-mob-in-the-middle.md  06-speed-daemon.md  07-line-reversal.md
documents/reflections/: about_acstor_test.md  about_protohackers.md
documents/vs_ocaml/: vs_ocaml_functors.md  workflow_strategic_advantages.md
scripts/: run_broadcast.sh  run_echo.sh  run_unique_ids.sh
src/: cmd.rs  error.rs  lib.rs  main.rs  tracer.rs
src/acstor/: mod.rs  planner.rs  protocol.rs  workload.rs
src/design_patterns/: dependency_injection.rs  mod.rs
src/gossipglomers/: echo.rs  mod.rs  protocol.rs
src/interview/: count_words.rs  mod.rs
src/maelstrom/: echo.rs  mod.rs  node.rs  protocol.rs  runner.rs  unique_ids.rs
src/maelstrom/nodes/: broadcast.rs  echo.rs  echo_node.rs  mod.rs  unique_ids.rs  unique_ids_node.rs
src/protohackers/: echo_server.rs  mean_to_end.rs  mod.rs  prime_time.rs  problem0.rs  problem1.rs  problem2.rs  problem3.rs  problem3v2.rs  problem3v3.rs
src/vs_ocaml/: functor_dependency_injection.rs  mod.rs  simplified_comparison.rs  workflow_advantages.rs
tests/: lrcp_e2e.rs  mod.rs
tests/gossipglomers/: protocol_test.rs
tests/maelstrom/: mod.rs  protocol_test.rs
(+25 files in other folders)
