[package]
name = "protohacker-in-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
atoi = "2.0.0"
bytes = "1"
rand = "0.9"

# Implements the types defined in the OTel spec
opentelemetry = { version = "0.31.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.32.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.19.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.31.0", optional = true }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
derive_more = { version = "2.0.1", features = ["full"] }
regex = "1.12.2"

[dev-dependencies]
async-stream = "0.3.6"
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[features]
otel = [
  "dep:opentelemetry",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-aws",
  "dep:opentelemetry-otlp",
]
